tests/invalid/10_token_invalido.mini0
// Caracter no reconocido

fun main()
    x: int
    x = 5 @ 3
end